test/assets/invalid/expect-list-not-tuple.hs
-- Expected a list, got a tuple
a  = head ('a', 'b')